# lego-mindstorms-prototype-framework

./: .gitignore  .gitmodules  install.sh
LeoCAD/models/: CompleteRoboter.mpd  all_valid_wheels.mpd  eval_wheeled_roboter_distance_sensor.mpd  eval_wheeled_roboter_light_sensor.mpd  eval_wheeled_roboter_no_sensors.mpd  eval_wheeled_roboter_touch_sensor.mpd  test_compass_sensor.ldr  test_distance_sensor.ldr  test_hinge_joint.ldr  test_touch_sensor.ldr  test_wheels.ldr  wheeled_roboter_distance_sensor.mpd  wheeled_roboter_light_sensor.mpd  wheeled_roboter_no_sensors.mpd  wheeled_roboter_touch_sensor.mpd
documentation/: Ros2Interface.md
ldrToProto/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
ldrToProto/doc/: addElements.md  nxtElements.md  wheels.md
ldrToProto/src/: colors.ts  configuration.ts  global.ts  main.ts  performanceLevel.ts  types.ts  utils.ts
ldrToProto/src/lego/: index.ts  types.ts
ldrToProto/src/lego/elements/: ignore.ts  index.ts  special.ts  wheels.ts
ldrToProto/src/parsers/: ldr.ts  reduceFileElements.ts  types.ts  utils.ts
ldrToProto/src/parsers/dat/: index.ts  read.ts
ldrToProto/src/parsers/dependencyGraph/: index.ts  types.ts  utils.ts
ldrToProto/src/transformation/: file.ts  index.ts  line.ts  matrix.ts  point.ts  vector.ts
ldrToProto/src/webots/: buildDevices.ts  fileToShape.ts  index.ts  proto.ts  robot.ts  types.ts  utils.ts
ldrToProto/src/webots/devices/: index.ts  sensors.ts
ldrToProto/src/webots/elements/: appearance.ts  geometry.ts  hingeJoints.ts  index.ts  shape.ts  solid.ts  transform.ts
ros2Workspace/: .gitignore  Dockerfile
ros2Workspace/src/brickpi3_ros2/: CMakeLists.txt  package.xml
ros2Workspace/src/brickpi3_ros2/include/brickpi3_ros2/: base_sensor_node.hpp  clock.hpp  compass_sensor_node.hpp  constants.hpp  distance_sensor_node.hpp  light_sensor_node.hpp  motor_node.hpp  touch_sensor_node.hpp  utils.hpp
ros2Workspace/src/brickpi3_ros2/launch/: launch.py
ros2Workspace/src/brickpi3_ros2/src/: base_sensor_node.cpp  clock.cpp  compass_sensor_node.cpp  distance_sensor_node.cpp  light_sensor_node.cpp  motor_node.cpp  touch_sensor_node.cpp  utils.cpp
ros2Workspace/src/evaluation_ros2_utils/: package.xml  setup.cfg  setup.py
ros2Workspace/src/evaluation_ros2_utils/evaluation_ros2_utils/: camera_plugin.py
ros2Workspace/src/evaluation_ros2_utils/launch/: launch_scenario.py  launch_sim_camera_node.py
ros2Workspace/src/evaluation_ros2_utils/resource/: Camera.urdf
ros2Workspace/src/evaluation_scenarios/: CMakeLists.txt  package.xml
ros2Workspace/src/evaluation_scenarios/src/: default_robot_node.cpp  default_robot_node.hpp  roboter_parameter.hpp
ros2Workspace/src/evaluation_scenarios/src/advanced/compass/: robot.cpp  robot.hpp
ros2Workspace/src/evaluation_scenarios/src/advanced/distance/: robot.cpp  robot.hpp
ros2Workspace/src/evaluation_scenarios/src/advanced/light/: robot.cpp  robot.hpp
ros2Workspace/src/evaluation_scenarios/src/advanced/touch/: robot.cpp  robot.hpp
ros2Workspace/src/evaluation_scenarios/src/simple/: constants.hpp
ros2Workspace/src/evaluation_scenarios/src/simple/set_position/: set_position_node.cpp  set_position_node.hpp  turn_left.cpp  turn_right.cpp
ros2Workspace/src/evaluation_scenarios/src/simple/set_power/: set_power_node.cpp  set_power_node.hpp  turn_left.cpp  turn_right.cpp
ros2Workspace/src/evaluation_scenarios/src/simple/set_velocity/: set_velocity_node.cpp  set_velocity_node.hpp  turn_left.cpp  turn_right.cpp
ros2Workspace/src/lm_ros2_utils/: package.xml  setup.cfg  setup.py
ros2Workspace/src/lm_ros2_utils/launch/: launch_real_scenario.py  launch_simulation.py
ros2Workspace/src/lm_ros2_utils/lm_ros2_utils/: utils.py
ros2Workspace/src/lm_ros2_utils/resource/: CompassSensorTest.urdf  CompleteRobot.urdf  EvalNoSensorsTest.urdf  EvalNoSensorsTest_3.urdf  EvalWheeledRoboterDistanceSensor.urdf  EvalWheeledRoboterLightSensor.urdf  EvalWheeledRoboterNoSensors.urdf  EvalWheeledRoboterTouchSensor.urdf  Eval_DistanceSensor.urdf  Eval_LightSensor.urdf  Eval_NoSensors.urdf  Eval_TouchSensor.urdf  TestHingeJoint.urdf  WheeledRoboterDistanceSensor.urdf  WheeledRoboterLightSensor.urdf  WheeledRoboterNoSensors.urdf  WheeledRoboterTouchSensor.urdf
ros2Workspace/src/ros2_examples/: package.xml  setup.py
ros2Workspace/src/ros2_examples/launch/: launch.py
ros2Workspace/src/ros2_examples/ros2_examples/: example_drive_base.py  set_position.py  set_position_and_reset_offset.py  set_position_and_set_offset.py  set_power.py  set_power_limit.py  set_velocity.py  set_velocity_limit.py
ros2Workspace/src/webots_ros2/: package.xml  setup.cfg  setup.py
ros2Workspace/src/webots_ros2/webots_ros2/: base_plugin.py  clock_plugin.py  compass_plugin.py  constants.py  distance_plugin.py  light_plugin.py  motor_plugin.py  motor_publisher.py  touch_plugin.py  utils.py
webotsWorkspace/worlds/: .evalRoboters.wbproj  .evaluationWorld.wbproj  .evaluation_ADVANCED_DistanceSensor.wbproj  .evaluation_ADVANCED_LightSensor.wbproj  .evaluation_ADVANCED_TouchSensor.wbproj  .world.wbproj  evalRoboters.wbt  evaluationWorld.wbt  evaluation_ADVANCED_DistanceSensor.wbt  evaluation_ADVANCED_LightSensor.wbt  evaluation_ADVANCED_TouchSensor.wbt  world.wbt
